--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+/* ContactForm attachment file input custom left button */
+.file-input::file-selector-button {
+  background-color: rgb(39 39 42);
+  opacity: 0.8;
+  color: white;
+  padding: 0.5rem 1rem;
+  margin-right: 0.5rem;
+  border-radius: 0;
+  border: none;
+  cursor: pointer;
+}
+.file-input::file-selector-button:hover {
+  opacity: 1;
+}
+
 /* 
 :root {
   --foreground-rgb: 0, 0, 0;
