--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,12 @@
   height: 175px;
 }
 
+/* Message transition for ContactForm Confirmation page */
+@keyframes slideIn {
+  from {
+    transform: translateX(-500px); 
+  }
+  to {
+    transform: translateX(0); 
+  }
+}
